fix: avoid text overflow in definition lists
re #27923

--- a/src/main/webapp/uii/templatePG/css/src/components/_definition-list.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_definition-list.scss
@@ -10,6 +10,7 @@
 .definition-list-description {
     padding: 0.375rem;
     grid-column: 1 / span 2;
+    word-break: break-all;
     &:hover {
         background-color: var(--clr-neutral-100);
     }
